--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<h1></h1>
 							<p></p>
 						</div>
-						<form action="https://formspree.io/f/mqkoryyn" method="POST">
+						<form action="https://formspree.io/f/mgejwpqg" method="POST">
 							<div class="bf-row">
 								<div class="bf-col-6">
 									<p>Your Name</p>
