--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
 									<p>Select Date</p>
 									<input type="date" name="Date Selected" id="date">
 								</div>
-								<div class="bf-col-5">
-									<label style="font-size: 0.8rem;" for="time">From</label>
+							</div>
+							<div class="bf-row">
+								<div class="bf-col-7">
+									<label for="time">Time</label>
 									<input type="time" name="Time Started" id="time" min="09:00" max="18:00" required>
 								</div>
-								<div class="bf-col-5">
-									<label style="font-size: 0.8rem;" for="time">To</label>
-									<input type="time" name="Time Finished" id="time" min="09:00" max="18:00" required>
+								<div class="bf-col-4">
+									<label style="font-size: 0.71rem;" for="time">Section Duration (min 30mins, max 4 hours):</label>
+									<input type="number" id="Duration" name="Duration" min="0.5" max="4" required>
 								</div>	
 							</div>							
 							<div class="bf-row">
